--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 #human-buttons {
+	position: absolute;
 	top: 0;
 	left: 0;
 	display: inline-block;
@@ -24,6 +25,7 @@ button {
 }
 
 header {
+	position: relative;
 	height: 15%;
 	border-bottom: 4px;
 	border-color: darkgray;
